set(NAME deps-arcadia-contrib-libs-openssl)
set(BASE ${CMAKE_SOURCE_DIR}/contrib/libs/openssl)
set(SRCS
  ${BASE}/crypto/aes/aes_cfb.c
  ${BASE}/crypto/aes/aes_ctr.c
  ${BASE}/crypto/aes/aes_ecb.c
  ${BASE}/crypto/aes/aes_ige.c
  ${BASE}/crypto/aes/aes_misc.c
  ${BASE}/crypto/aes/aes_ofb.c
  ${BASE}/crypto/aes/aes_wrap.c
  ${BASE}/crypto/asn1/a_bitstr.c
  ${BASE}/crypto/asn1/a_bool.c
  ${BASE}/crypto/asn1/a_bytes.c
  ${BASE}/crypto/asn1/a_d2i_fp.c
  ${BASE}/crypto/asn1/a_digest.c
  ${BASE}/crypto/asn1/a_dup.c
  ${BASE}/crypto/asn1/a_enum.c
  ${BASE}/crypto/asn1/a_gentm.c
  ${BASE}/crypto/asn1/a_i2d_fp.c
  ${BASE}/crypto/asn1/a_int.c
  ${BASE}/crypto/asn1/a_mbstr.c
  ${BASE}/crypto/asn1/a_object.c
  ${BASE}/crypto/asn1/a_octet.c
  ${BASE}/crypto/asn1/a_print.c
  ${BASE}/crypto/asn1/a_set.c
  ${BASE}/crypto/asn1/a_sign.c
  ${BASE}/crypto/asn1/a_strex.c
  ${BASE}/crypto/asn1/a_strnid.c
  ${BASE}/crypto/asn1/a_time.c
  ${BASE}/crypto/asn1/a_type.c
  ${BASE}/crypto/asn1/a_utctm.c
  ${BASE}/crypto/asn1/a_utf8.c
  ${BASE}/crypto/asn1/a_verify.c
  ${BASE}/crypto/asn1/ameth_lib.c
  ${BASE}/crypto/asn1/asn1_err.c
  ${BASE}/crypto/asn1/asn1_gen.c
  ${BASE}/crypto/asn1/asn1_lib.c
  ${BASE}/crypto/asn1/asn1_par.c
  ${BASE}/crypto/asn1/asn_mime.c
  ${BASE}/crypto/asn1/asn_moid.c
  ${BASE}/crypto/asn1/asn_pack.c
  ${BASE}/crypto/asn1/bio_asn1.c
  ${BASE}/crypto/asn1/bio_ndef.c
  ${BASE}/crypto/asn1/d2i_pr.c
  ${BASE}/crypto/asn1/d2i_pu.c
  ${BASE}/crypto/asn1/evp_asn1.c
  ${BASE}/crypto/asn1/f_enum.c
  ${BASE}/crypto/asn1/f_int.c
  ${BASE}/crypto/asn1/f_string.c
  ${BASE}/crypto/asn1/i2d_pr.c
  ${BASE}/crypto/asn1/i2d_pu.c
  ${BASE}/crypto/asn1/n_pkey.c
  ${BASE}/crypto/asn1/nsseq.c
  ${BASE}/crypto/asn1/p5_pbe.c
  ${BASE}/crypto/asn1/p5_pbev2.c
  ${BASE}/crypto/asn1/p8_pkey.c
  ${BASE}/crypto/asn1/t_bitst.c
  ${BASE}/crypto/asn1/t_crl.c
  ${BASE}/crypto/asn1/t_pkey.c
  ${BASE}/crypto/asn1/t_req.c
  ${BASE}/crypto/asn1/t_spki.c
  ${BASE}/crypto/asn1/t_x509.c
  ${BASE}/crypto/asn1/t_x509a.c
  ${BASE}/crypto/asn1/tasn_dec.c
  ${BASE}/crypto/asn1/tasn_enc.c
  ${BASE}/crypto/asn1/tasn_fre.c
  ${BASE}/crypto/asn1/tasn_new.c
  ${BASE}/crypto/asn1/tasn_prn.c
  ${BASE}/crypto/asn1/tasn_typ.c
  ${BASE}/crypto/asn1/tasn_utl.c
  ${BASE}/crypto/asn1/x_algor.c
  ${BASE}/crypto/asn1/x_attrib.c
  ${BASE}/crypto/asn1/x_bignum.c
  ${BASE}/crypto/asn1/x_crl.c
  ${BASE}/crypto/asn1/x_exten.c
  ${BASE}/crypto/asn1/x_info.c
  ${BASE}/crypto/asn1/x_long.c
  ${BASE}/crypto/asn1/x_name.c
  ${BASE}/crypto/asn1/x_nx509.c
  ${BASE}/crypto/asn1/x_pkey.c
  ${BASE}/crypto/asn1/x_pubkey.c
  ${BASE}/crypto/asn1/x_req.c
  ${BASE}/crypto/asn1/x_sig.c
  ${BASE}/crypto/asn1/x_spki.c
  ${BASE}/crypto/asn1/x_val.c
  ${BASE}/crypto/asn1/x_x509.c
  ${BASE}/crypto/asn1/x_x509a.c
  ${BASE}/crypto/bf/bf_cfb64.c
  ${BASE}/crypto/bf/bf_ecb.c
  ${BASE}/crypto/bf/bf_enc.c
  ${BASE}/crypto/bf/bf_ofb64.c
  ${BASE}/crypto/bf/bf_skey.c
  ${BASE}/crypto/bio/b_dump.c
  ${BASE}/crypto/bio/b_print.c
  ${BASE}/crypto/bio/b_sock.c
  ${BASE}/crypto/bio/bf_buff.c
  ${BASE}/crypto/bio/bf_nbio.c
  ${BASE}/crypto/bio/bf_null.c
  ${BASE}/crypto/bio/bio_cb.c
  ${BASE}/crypto/bio/bio_err.c
  ${BASE}/crypto/bio/bio_lib.c
  ${BASE}/crypto/bio/bss_acpt.c
  ${BASE}/crypto/bio/bss_bio.c
  ${BASE}/crypto/bio/bss_conn.c
  ${BASE}/crypto/bio/bss_dgram.c
  ${BASE}/crypto/bio/bss_fd.c
  ${BASE}/crypto/bio/bss_file.c
  ${BASE}/crypto/bio/bss_log.c
  ${BASE}/crypto/bio/bss_mem.c
  ${BASE}/crypto/bio/bss_null.c
  ${BASE}/crypto/bio/bss_sock.c
  ${BASE}/crypto/bn/bn_add.c
  ${BASE}/crypto/bn/bn_blind.c
  ${BASE}/crypto/bn/bn_const.c
  ${BASE}/crypto/bn/bn_ctx.c
  ${BASE}/crypto/bn/bn_depr.c
  ${BASE}/crypto/bn/bn_div.c
  ${BASE}/crypto/bn/bn_err.c
  ${BASE}/crypto/bn/bn_exp.c
  ${BASE}/crypto/bn/bn_exp2.c
  ${BASE}/crypto/bn/bn_gcd.c
  ${BASE}/crypto/bn/bn_gf2m.c
  ${BASE}/crypto/bn/bn_kron.c
  ${BASE}/crypto/bn/bn_lib.c
  ${BASE}/crypto/bn/bn_mod.c
  ${BASE}/crypto/bn/bn_mont.c
  ${BASE}/crypto/bn/bn_mpi.c
  ${BASE}/crypto/bn/bn_mul.c
  ${BASE}/crypto/bn/bn_nist.c
  ${BASE}/crypto/bn/bn_prime.c
  ${BASE}/crypto/bn/bn_print.c
  ${BASE}/crypto/bn/bn_rand.c
  ${BASE}/crypto/bn/bn_recp.c
  ${BASE}/crypto/bn/bn_shift.c
  ${BASE}/crypto/bn/bn_sqr.c
  ${BASE}/crypto/bn/bn_sqrt.c
  ${BASE}/crypto/bn/bn_word.c
  ${BASE}/crypto/bn/bn_x931p.c
  ${BASE}/crypto/buffer/buf_err.c
  ${BASE}/crypto/buffer/buf_str.c
  ${BASE}/crypto/buffer/buffer.c
  ${BASE}/crypto/camellia/cmll_cfb.c
  ${BASE}/crypto/camellia/cmll_ctr.c
  ${BASE}/crypto/camellia/cmll_ecb.c
  ${BASE}/crypto/camellia/cmll_misc.c
  ${BASE}/crypto/camellia/cmll_ofb.c
  ${BASE}/crypto/camellia/cmll_utl.c
  ${BASE}/crypto/cast/c_cfb64.c
  ${BASE}/crypto/cast/c_ecb.c
  ${BASE}/crypto/cast/c_enc.c
  ${BASE}/crypto/cast/c_ofb64.c
  ${BASE}/crypto/cast/c_skey.c
  ${BASE}/crypto/cmac/cm_ameth.c
  ${BASE}/crypto/cmac/cm_pmeth.c
  ${BASE}/crypto/cmac/cmac.c
  ${BASE}/crypto/cms/cms_asn1.c
  ${BASE}/crypto/cms/cms_att.c
  ${BASE}/crypto/cms/cms_cd.c
  ${BASE}/crypto/cms/cms_dd.c
  ${BASE}/crypto/cms/cms_enc.c
  ${BASE}/crypto/cms/cms_env.c
  ${BASE}/crypto/cms/cms_err.c
  ${BASE}/crypto/cms/cms_ess.c
  ${BASE}/crypto/cms/cms_io.c
  ${BASE}/crypto/cms/cms_kari.c
  ${BASE}/crypto/cms/cms_lib.c
  ${BASE}/crypto/cms/cms_pwri.c
  ${BASE}/crypto/cms/cms_sd.c
  ${BASE}/crypto/cms/cms_smime.c
  ${BASE}/crypto/comp/c_rle.c
  ${BASE}/crypto/comp/c_zlib.c
  ${BASE}/crypto/comp/comp_err.c
  ${BASE}/crypto/comp/comp_lib.c
  ${BASE}/crypto/conf/conf_api.c
  ${BASE}/crypto/conf/conf_def.c
  ${BASE}/crypto/conf/conf_err.c
  ${BASE}/crypto/conf/conf_lib.c
  ${BASE}/crypto/conf/conf_mall.c
  ${BASE}/crypto/conf/conf_mod.c
  ${BASE}/crypto/conf/conf_sap.c
  ${BASE}/crypto/cpt_err.c
  ${BASE}/crypto/cryptlib.c
  ${BASE}/crypto/cversion.c
  ${BASE}/crypto/des/cbc_cksm.c
  ${BASE}/crypto/des/cbc_enc.c
  ${BASE}/crypto/des/cfb64ede.c
  ${BASE}/crypto/des/cfb64enc.c
  ${BASE}/crypto/des/cfb_enc.c
  ${BASE}/crypto/des/des_enc.c
  ${BASE}/crypto/des/des_old.c
  ${BASE}/crypto/des/des_old2.c
  ${BASE}/crypto/des/ecb3_enc.c
  ${BASE}/crypto/des/ecb_enc.c
  ${BASE}/crypto/des/ede_cbcm_enc.c
  ${BASE}/crypto/des/enc_read.c
  ${BASE}/crypto/des/enc_writ.c
  ${BASE}/crypto/des/fcrypt.c
  ${BASE}/crypto/des/fcrypt_b.c
  ${BASE}/crypto/des/ofb64ede.c
  ${BASE}/crypto/des/ofb64enc.c
  ${BASE}/crypto/des/ofb_enc.c
  ${BASE}/crypto/des/pcbc_enc.c
  ${BASE}/crypto/des/qud_cksm.c
  ${BASE}/crypto/des/rand_key.c
  ${BASE}/crypto/des/read2pwd.c
  ${BASE}/crypto/des/rpc_enc.c
  ${BASE}/crypto/des/set_key.c
  ${BASE}/crypto/des/str2key.c
  ${BASE}/crypto/des/xcbc_enc.c
  ${BASE}/crypto/dh/dh_ameth.c
  ${BASE}/crypto/dh/dh_asn1.c
  ${BASE}/crypto/dh/dh_check.c
  ${BASE}/crypto/dh/dh_depr.c
  ${BASE}/crypto/dh/dh_err.c
  ${BASE}/crypto/dh/dh_gen.c
  ${BASE}/crypto/dh/dh_kdf.c
  ${BASE}/crypto/dh/dh_key.c
  ${BASE}/crypto/dh/dh_lib.c
  ${BASE}/crypto/dh/dh_pmeth.c
  ${BASE}/crypto/dh/dh_prn.c
  ${BASE}/crypto/dh/dh_rfc5114.c
  ${BASE}/crypto/dsa/dsa_ameth.c
  ${BASE}/crypto/dsa/dsa_asn1.c
  ${BASE}/crypto/dsa/dsa_depr.c
  ${BASE}/crypto/dsa/dsa_err.c
  ${BASE}/crypto/dsa/dsa_gen.c
  ${BASE}/crypto/dsa/dsa_key.c
  ${BASE}/crypto/dsa/dsa_lib.c
  ${BASE}/crypto/dsa/dsa_ossl.c
  ${BASE}/crypto/dsa/dsa_pmeth.c
  ${BASE}/crypto/dsa/dsa_prn.c
  ${BASE}/crypto/dsa/dsa_sign.c
  ${BASE}/crypto/dsa/dsa_vrf.c
  ${BASE}/crypto/dso/dso_beos.c
  ${BASE}/crypto/dso/dso_dl.c
  ${BASE}/crypto/dso/dso_dlfcn.c
  ${BASE}/crypto/dso/dso_err.c
  ${BASE}/crypto/dso/dso_lib.c
  ${BASE}/crypto/dso/dso_null.c
  ${BASE}/crypto/dso/dso_openssl.c
  ${BASE}/crypto/dso/dso_vms.c
  ${BASE}/crypto/dso/dso_win32.c
  ${BASE}/crypto/ebcdic.c
  ${BASE}/crypto/ec/ec2_mult.c
  ${BASE}/crypto/ec/ec2_oct.c
  ${BASE}/crypto/ec/ec2_smpl.c
  ${BASE}/crypto/ec/ec_ameth.c
  ${BASE}/crypto/ec/ec_asn1.c
  ${BASE}/crypto/ec/ec_check.c
  ${BASE}/crypto/ec/ec_curve.c
  ${BASE}/crypto/ec/ec_cvt.c
  ${BASE}/crypto/ec/ec_err.c
  ${BASE}/crypto/ec/ec_key.c
  ${BASE}/crypto/ec/ec_lib.c
  ${BASE}/crypto/ec/ec_mult.c
  ${BASE}/crypto/ec/ec_oct.c
  ${BASE}/crypto/ec/ec_pmeth.c
  ${BASE}/crypto/ec/ec_print.c
  ${BASE}/crypto/ec/eck_prn.c
  ${BASE}/crypto/ec/ecp_mont.c
  ${BASE}/crypto/ec/ecp_nist.c
  ${BASE}/crypto/ec/ecp_nistp224.c
  ${BASE}/crypto/ec/ecp_nistp256.c
  ${BASE}/crypto/ec/ecp_nistp521.c
  ${BASE}/crypto/ec/ecp_nistputil.c
  ${BASE}/crypto/ec/ecp_oct.c
  ${BASE}/crypto/ec/ecp_smpl.c
  ${BASE}/crypto/ecdh/ech_err.c
  ${BASE}/crypto/ecdh/ech_kdf.c
  ${BASE}/crypto/ecdh/ech_key.c
  ${BASE}/crypto/ecdh/ech_lib.c
  ${BASE}/crypto/ecdh/ech_ossl.c
  ${BASE}/crypto/ecdsa/ecs_asn1.c
  ${BASE}/crypto/ecdsa/ecs_err.c
  ${BASE}/crypto/ecdsa/ecs_lib.c
  ${BASE}/crypto/ecdsa/ecs_ossl.c
  ${BASE}/crypto/ecdsa/ecs_sign.c
  ${BASE}/crypto/ecdsa/ecs_vrf.c
  ${BASE}/crypto/engine/eng_all.c
  ${BASE}/crypto/engine/eng_cnf.c
  ${BASE}/crypto/engine/eng_cryptodev.c
  ${BASE}/crypto/engine/eng_ctrl.c
  ${BASE}/crypto/engine/eng_dyn.c
  ${BASE}/crypto/engine/eng_err.c
  ${BASE}/crypto/engine/eng_fat.c
  ${BASE}/crypto/engine/eng_init.c
  ${BASE}/crypto/engine/eng_lib.c
  ${BASE}/crypto/engine/eng_list.c
  ${BASE}/crypto/engine/eng_openssl.c
  ${BASE}/crypto/engine/eng_pkey.c
  ${BASE}/crypto/engine/eng_rdrand.c
  ${BASE}/crypto/engine/eng_table.c
  ${BASE}/crypto/engine/tb_asnmth.c
  ${BASE}/crypto/engine/tb_cipher.c
  ${BASE}/crypto/engine/tb_dh.c
  ${BASE}/crypto/engine/tb_digest.c
  ${BASE}/crypto/engine/tb_dsa.c
  ${BASE}/crypto/engine/tb_ecdh.c
  ${BASE}/crypto/engine/tb_ecdsa.c
  ${BASE}/crypto/engine/tb_pkmeth.c
  ${BASE}/crypto/engine/tb_rand.c
  ${BASE}/crypto/engine/tb_rsa.c
  ${BASE}/crypto/engine/tb_store.c
  ${BASE}/crypto/err/err.c
  ${BASE}/crypto/err/err_all.c
  ${BASE}/crypto/err/err_prn.c
  ${BASE}/crypto/evp/bio_b64.c
  ${BASE}/crypto/evp/bio_enc.c
  ${BASE}/crypto/evp/bio_md.c
  ${BASE}/crypto/evp/bio_ok.c
  ${BASE}/crypto/evp/c_all.c
  ${BASE}/crypto/evp/c_allc.c
  ${BASE}/crypto/evp/c_alld.c
  ${BASE}/crypto/evp/digest.c
  ${BASE}/crypto/evp/e_aes.c
  ${BASE}/crypto/evp/e_aes_cbc_hmac_sha1.c
  ${BASE}/crypto/evp/e_aes_cbc_hmac_sha256.c
  ${BASE}/crypto/evp/e_bf.c
  ${BASE}/crypto/evp/e_camellia.c
  ${BASE}/crypto/evp/e_cast.c
  ${BASE}/crypto/evp/e_des.c
  ${BASE}/crypto/evp/e_des3.c
  ${BASE}/crypto/evp/e_idea.c
  ${BASE}/crypto/evp/e_null.c
  ${BASE}/crypto/evp/e_old.c
  ${BASE}/crypto/evp/e_rc2.c
  ${BASE}/crypto/evp/e_rc4.c
  ${BASE}/crypto/evp/e_rc4_hmac_md5.c
  ${BASE}/crypto/evp/e_rc5.c
  ${BASE}/crypto/evp/e_seed.c
  ${BASE}/crypto/evp/e_xcbc_d.c
  ${BASE}/crypto/evp/encode.c
  ${BASE}/crypto/evp/evp_acnf.c
  ${BASE}/crypto/evp/evp_cnf.c
  ${BASE}/crypto/evp/evp_enc.c
  ${BASE}/crypto/evp/evp_err.c
  ${BASE}/crypto/evp/evp_key.c
  ${BASE}/crypto/evp/evp_lib.c
  ${BASE}/crypto/evp/evp_pbe.c
  ${BASE}/crypto/evp/evp_pkey.c
  ${BASE}/crypto/evp/m_dss.c
  ${BASE}/crypto/evp/m_dss1.c
  ${BASE}/crypto/evp/m_ecdsa.c
  ${BASE}/crypto/evp/m_md4.c
  ${BASE}/crypto/evp/m_md5.c
  ${BASE}/crypto/evp/m_mdc2.c
  ${BASE}/crypto/evp/m_null.c
  ${BASE}/crypto/evp/m_ripemd.c
  ${BASE}/crypto/evp/m_sha.c
  ${BASE}/crypto/evp/m_sha1.c
  ${BASE}/crypto/evp/m_sigver.c
  ${BASE}/crypto/evp/m_wp.c
  ${BASE}/crypto/evp/names.c
  ${BASE}/crypto/evp/p5_crpt.c
  ${BASE}/crypto/evp/p5_crpt2.c
  ${BASE}/crypto/evp/p_dec.c
  ${BASE}/crypto/evp/p_enc.c
  ${BASE}/crypto/evp/p_lib.c
  ${BASE}/crypto/evp/p_open.c
  ${BASE}/crypto/evp/p_seal.c
  ${BASE}/crypto/evp/p_sign.c
  ${BASE}/crypto/evp/p_verify.c
  ${BASE}/crypto/evp/pmeth_fn.c
  ${BASE}/crypto/evp/pmeth_gn.c
  ${BASE}/crypto/evp/pmeth_lib.c
  ${BASE}/crypto/ex_data.c
  ${BASE}/crypto/fips_ers.c
  ${BASE}/crypto/hmac/hm_ameth.c
  ${BASE}/crypto/hmac/hm_pmeth.c
  ${BASE}/crypto/hmac/hmac.c
  ${BASE}/crypto/idea/i_cbc.c
  ${BASE}/crypto/idea/i_cfb64.c
  ${BASE}/crypto/idea/i_ecb.c
  ${BASE}/crypto/idea/i_ofb64.c
  ${BASE}/crypto/idea/i_skey.c
  ${BASE}/crypto/krb5/krb5_asn.c
  ${BASE}/crypto/lhash/lh_stats.c
  ${BASE}/crypto/lhash/lhash.c
  ${BASE}/crypto/md4/md4_dgst.c
  ${BASE}/crypto/md4/md4_one.c
  ${BASE}/crypto/md5/md5_dgst.c
  ${BASE}/crypto/md5/md5_one.c
  ${BASE}/crypto/mdc2/mdc2_one.c
  ${BASE}/crypto/mdc2/mdc2dgst.c
  ${BASE}/crypto/mem.c
  ${BASE}/crypto/mem_dbg.c
  ${BASE}/crypto/modes/cbc128.c
  ${BASE}/crypto/modes/ccm128.c
  ${BASE}/crypto/modes/cfb128.c
  ${BASE}/crypto/modes/ctr128.c
  ${BASE}/crypto/modes/cts128.c
  ${BASE}/crypto/modes/gcm128.c
  ${BASE}/crypto/modes/ofb128.c
  ${BASE}/crypto/modes/wrap128.c
  ${BASE}/crypto/modes/xts128.c
  ${BASE}/crypto/o_dir.c
  ${BASE}/crypto/o_fips.c
  ${BASE}/crypto/o_init.c
  ${BASE}/crypto/o_str.c
  ${BASE}/crypto/o_time.c
  ${BASE}/crypto/objects/o_names.c
  ${BASE}/crypto/objects/obj_dat.c
  ${BASE}/crypto/objects/obj_err.c
  ${BASE}/crypto/objects/obj_lib.c
  ${BASE}/crypto/objects/obj_xref.c
  ${BASE}/crypto/ocsp/ocsp_asn.c
  ${BASE}/crypto/ocsp/ocsp_cl.c
  ${BASE}/crypto/ocsp/ocsp_err.c
  ${BASE}/crypto/ocsp/ocsp_ext.c
  ${BASE}/crypto/ocsp/ocsp_ht.c
  ${BASE}/crypto/ocsp/ocsp_lib.c
  ${BASE}/crypto/ocsp/ocsp_prn.c
  ${BASE}/crypto/ocsp/ocsp_srv.c
  ${BASE}/crypto/ocsp/ocsp_vfy.c
  ${BASE}/crypto/pem/pem_all.c
  ${BASE}/crypto/pem/pem_err.c
  ${BASE}/crypto/pem/pem_info.c
  ${BASE}/crypto/pem/pem_lib.c
  ${BASE}/crypto/pem/pem_oth.c
  ${BASE}/crypto/pem/pem_pk8.c
  ${BASE}/crypto/pem/pem_pkey.c
  ${BASE}/crypto/pem/pem_seal.c
  ${BASE}/crypto/pem/pem_sign.c
  ${BASE}/crypto/pem/pem_x509.c
  ${BASE}/crypto/pem/pem_xaux.c
  ${BASE}/crypto/pem/pvkfmt.c
  ${BASE}/crypto/pkcs12/p12_add.c
  ${BASE}/crypto/pkcs12/p12_asn.c
  ${BASE}/crypto/pkcs12/p12_attr.c
  ${BASE}/crypto/pkcs12/p12_crpt.c
  ${BASE}/crypto/pkcs12/p12_crt.c
  ${BASE}/crypto/pkcs12/p12_decr.c
  ${BASE}/crypto/pkcs12/p12_init.c
  ${BASE}/crypto/pkcs12/p12_key.c
  ${BASE}/crypto/pkcs12/p12_kiss.c
  ${BASE}/crypto/pkcs12/p12_mutl.c
  ${BASE}/crypto/pkcs12/p12_npas.c
  ${BASE}/crypto/pkcs12/p12_p8d.c
  ${BASE}/crypto/pkcs12/p12_p8e.c
  ${BASE}/crypto/pkcs12/p12_utl.c
  ${BASE}/crypto/pkcs12/pk12err.c
  ${BASE}/crypto/pkcs7/bio_pk7.c
  ${BASE}/crypto/pkcs7/pk7_asn1.c
  ${BASE}/crypto/pkcs7/pk7_attr.c
  ${BASE}/crypto/pkcs7/pk7_doit.c
  ${BASE}/crypto/pkcs7/pk7_lib.c
  ${BASE}/crypto/pkcs7/pk7_mime.c
  ${BASE}/crypto/pkcs7/pk7_smime.c
  ${BASE}/crypto/pkcs7/pkcs7err.c
  ${BASE}/crypto/pqueue/pqueue.c
  ${BASE}/crypto/rand/md_rand.c
  ${BASE}/crypto/rand/rand_egd.c
  ${BASE}/crypto/rand/rand_err.c
  ${BASE}/crypto/rand/rand_lib.c
  ${BASE}/crypto/rand/rand_nw.c
  ${BASE}/crypto/rand/rand_os2.c
  ${BASE}/crypto/rand/rand_unix.c
  ${BASE}/crypto/rand/rand_win.c
  ${BASE}/crypto/rand/randfile.c
  ${BASE}/crypto/rc2/rc2_cbc.c
  ${BASE}/crypto/rc2/rc2_ecb.c
  ${BASE}/crypto/rc2/rc2_skey.c
  ${BASE}/crypto/rc2/rc2cfb64.c
  ${BASE}/crypto/rc2/rc2ofb64.c
  ${BASE}/crypto/rc4/rc4_utl.c
  ${BASE}/crypto/ripemd/rmd_dgst.c
  ${BASE}/crypto/ripemd/rmd_one.c
  ${BASE}/crypto/rsa/rsa_ameth.c
  ${BASE}/crypto/rsa/rsa_asn1.c
  ${BASE}/crypto/rsa/rsa_chk.c
  ${BASE}/crypto/rsa/rsa_crpt.c
  ${BASE}/crypto/rsa/rsa_depr.c
  ${BASE}/crypto/rsa/rsa_eay.c
  ${BASE}/crypto/rsa/rsa_err.c
  ${BASE}/crypto/rsa/rsa_gen.c
  ${BASE}/crypto/rsa/rsa_lib.c
  ${BASE}/crypto/rsa/rsa_none.c
  ${BASE}/crypto/rsa/rsa_null.c
  ${BASE}/crypto/rsa/rsa_oaep.c
  ${BASE}/crypto/rsa/rsa_pk1.c
  ${BASE}/crypto/rsa/rsa_pmeth.c
  ${BASE}/crypto/rsa/rsa_prn.c
  ${BASE}/crypto/rsa/rsa_pss.c
  ${BASE}/crypto/rsa/rsa_saos.c
  ${BASE}/crypto/rsa/rsa_sign.c
  ${BASE}/crypto/rsa/rsa_ssl.c
  ${BASE}/crypto/rsa/rsa_x931.c
  ${BASE}/crypto/seed/seed.c
  ${BASE}/crypto/seed/seed_cbc.c
  ${BASE}/crypto/seed/seed_cfb.c
  ${BASE}/crypto/seed/seed_ecb.c
  ${BASE}/crypto/seed/seed_ofb.c
  ${BASE}/crypto/sha/sha1_one.c
  ${BASE}/crypto/sha/sha1dgst.c
  ${BASE}/crypto/sha/sha256.c
  ${BASE}/crypto/sha/sha512.c
  ${BASE}/crypto/sha/sha_dgst.c
  ${BASE}/crypto/sha/sha_one.c
  ${BASE}/crypto/srp/srp_lib.c
  ${BASE}/crypto/srp/srp_vfy.c
  ${BASE}/crypto/stack/stack.c
  ${BASE}/crypto/ts/ts_asn1.c
  ${BASE}/crypto/ts/ts_conf.c
  ${BASE}/crypto/ts/ts_err.c
  ${BASE}/crypto/ts/ts_lib.c
  ${BASE}/crypto/ts/ts_req_print.c
  ${BASE}/crypto/ts/ts_req_utils.c
  ${BASE}/crypto/ts/ts_rsp_print.c
  ${BASE}/crypto/ts/ts_rsp_sign.c
  ${BASE}/crypto/ts/ts_rsp_utils.c
  ${BASE}/crypto/ts/ts_rsp_verify.c
  ${BASE}/crypto/ts/ts_verify_ctx.c
  ${BASE}/crypto/txt_db/txt_db.c
  ${BASE}/crypto/ui/ui_compat.c
  ${BASE}/crypto/ui/ui_err.c
  ${BASE}/crypto/ui/ui_lib.c
  ${BASE}/crypto/ui/ui_openssl.c
  ${BASE}/crypto/ui/ui_util.c
  ${BASE}/crypto/uid.c
  ${BASE}/crypto/whrlpool/wp_dgst.c
  ${BASE}/crypto/x509/by_dir.c
  ${BASE}/crypto/x509/by_file.c
  ${BASE}/crypto/x509/x509_att.c
  ${BASE}/crypto/x509/x509_cmp.c
  ${BASE}/crypto/x509/x509_d2.c
  ${BASE}/crypto/x509/x509_def.c
  ${BASE}/crypto/x509/x509_err.c
  ${BASE}/crypto/x509/x509_ext.c
  ${BASE}/crypto/x509/x509_lu.c
  ${BASE}/crypto/x509/x509_obj.c
  ${BASE}/crypto/x509/x509_r2x.c
  ${BASE}/crypto/x509/x509_req.c
  ${BASE}/crypto/x509/x509_set.c
  ${BASE}/crypto/x509/x509_trs.c
  ${BASE}/crypto/x509/x509_txt.c
  ${BASE}/crypto/x509/x509_v3.c
  ${BASE}/crypto/x509/x509_vfy.c
  ${BASE}/crypto/x509/x509_vpm.c
  ${BASE}/crypto/x509/x509cset.c
  ${BASE}/crypto/x509/x509name.c
  ${BASE}/crypto/x509/x509rset.c
  ${BASE}/crypto/x509/x509spki.c
  ${BASE}/crypto/x509/x509type.c
  ${BASE}/crypto/x509/x_all.c
  ${BASE}/crypto/x509v3/pcy_cache.c
  ${BASE}/crypto/x509v3/pcy_data.c
  ${BASE}/crypto/x509v3/pcy_lib.c
  ${BASE}/crypto/x509v3/pcy_map.c
  ${BASE}/crypto/x509v3/pcy_node.c
  ${BASE}/crypto/x509v3/pcy_tree.c
  ${BASE}/crypto/x509v3/v3_addr.c
  ${BASE}/crypto/x509v3/v3_akey.c
  ${BASE}/crypto/x509v3/v3_akeya.c
  ${BASE}/crypto/x509v3/v3_alt.c
  ${BASE}/crypto/x509v3/v3_asid.c
  ${BASE}/crypto/x509v3/v3_bcons.c
  ${BASE}/crypto/x509v3/v3_bitst.c
  ${BASE}/crypto/x509v3/v3_conf.c
  ${BASE}/crypto/x509v3/v3_cpols.c
  ${BASE}/crypto/x509v3/v3_crld.c
  ${BASE}/crypto/x509v3/v3_enum.c
  ${BASE}/crypto/x509v3/v3_extku.c
  ${BASE}/crypto/x509v3/v3_genn.c
  ${BASE}/crypto/x509v3/v3_ia5.c
  ${BASE}/crypto/x509v3/v3_info.c
  ${BASE}/crypto/x509v3/v3_int.c
  ${BASE}/crypto/x509v3/v3_lib.c
  ${BASE}/crypto/x509v3/v3_ncons.c
  ${BASE}/crypto/x509v3/v3_ocsp.c
  ${BASE}/crypto/x509v3/v3_pci.c
  ${BASE}/crypto/x509v3/v3_pcia.c
  ${BASE}/crypto/x509v3/v3_pcons.c
  ${BASE}/crypto/x509v3/v3_pku.c
  ${BASE}/crypto/x509v3/v3_pmaps.c
  ${BASE}/crypto/x509v3/v3_prn.c
  ${BASE}/crypto/x509v3/v3_purp.c
  ${BASE}/crypto/x509v3/v3_scts.c
  ${BASE}/crypto/x509v3/v3_skey.c
  ${BASE}/crypto/x509v3/v3_sxnet.c
  ${BASE}/crypto/x509v3/v3_utl.c
  ${BASE}/crypto/x509v3/v3err.c
  ${BASE}/engines/ccgost/e_gost_err.c
  ${BASE}/engines/ccgost/gost2001.c
  ${BASE}/engines/ccgost/gost2001_keyx.c
  ${BASE}/engines/ccgost/gost89.c
  ${BASE}/engines/ccgost/gost94_keyx.c
  ${BASE}/engines/ccgost/gost_ameth.c
  ${BASE}/engines/ccgost/gost_asn1.c
  ${BASE}/engines/ccgost/gost_crypt.c
  ${BASE}/engines/ccgost/gost_ctl.c
  ${BASE}/engines/ccgost/gost_eng.c
  ${BASE}/engines/ccgost/gost_keywrap.c
  ${BASE}/engines/ccgost/gost_md.c
  ${BASE}/engines/ccgost/gost_params.c
  ${BASE}/engines/ccgost/gost_pmeth.c
  ${BASE}/engines/ccgost/gost_sign.c
  ${BASE}/engines/ccgost/gosthash.c
  ${BASE}/engines/e_4758cca.c
  ${BASE}/engines/e_aep.c
  ${BASE}/engines/e_atalla.c
  ${BASE}/engines/e_capi.c
  ${BASE}/engines/e_chil.c
  ${BASE}/engines/e_cswift.c
  ${BASE}/engines/e_gmp.c
  ${BASE}/engines/e_nuron.c
  ${BASE}/engines/e_padlock.c
  ${BASE}/engines/e_sureware.c
  ${BASE}/engines/e_ubsec.c
  ${BASE}/ssl/bio_ssl.c
  ${BASE}/ssl/d1_both.c
  ${BASE}/ssl/d1_clnt.c
  ${BASE}/ssl/d1_lib.c
  ${BASE}/ssl/d1_meth.c
  ${BASE}/ssl/d1_pkt.c
  ${BASE}/ssl/d1_srtp.c
  ${BASE}/ssl/d1_srvr.c
  ${BASE}/ssl/kssl.c
  ${BASE}/ssl/s23_clnt.c
  ${BASE}/ssl/s23_lib.c
  ${BASE}/ssl/s23_meth.c
  ${BASE}/ssl/s23_pkt.c
  ${BASE}/ssl/s23_srvr.c
  ${BASE}/ssl/s2_clnt.c
  ${BASE}/ssl/s2_enc.c
  ${BASE}/ssl/s2_lib.c
  ${BASE}/ssl/s2_meth.c
  ${BASE}/ssl/s2_pkt.c
  ${BASE}/ssl/s2_srvr.c
  ${BASE}/ssl/s3_both.c
  ${BASE}/ssl/s3_cbc.c
  ${BASE}/ssl/s3_clnt.c
  ${BASE}/ssl/s3_enc.c
  ${BASE}/ssl/s3_lib.c
  ${BASE}/ssl/s3_meth.c
  ${BASE}/ssl/s3_pkt.c
  ${BASE}/ssl/s3_srvr.c
  ${BASE}/ssl/ssl_algs.c
  ${BASE}/ssl/ssl_asn1.c
  ${BASE}/ssl/ssl_cert.c
  ${BASE}/ssl/ssl_ciph.c
  ${BASE}/ssl/ssl_conf.c
  ${BASE}/ssl/ssl_err.c
  ${BASE}/ssl/ssl_err2.c
  ${BASE}/ssl/ssl_lib.c
  ${BASE}/ssl/ssl_rsa.c
  ${BASE}/ssl/ssl_sess.c
  ${BASE}/ssl/ssl_stat.c
  ${BASE}/ssl/ssl_txt.c
  ${BASE}/ssl/ssl_utst.c
  ${BASE}/ssl/t1_clnt.c
  ${BASE}/ssl/t1_enc.c
  ${BASE}/ssl/t1_ext.c
  ${BASE}/ssl/t1_lib.c
  ${BASE}/ssl/t1_meth.c
  ${BASE}/ssl/t1_reneg.c
  ${BASE}/ssl/t1_srvr.c
  ${BASE}/ssl/t1_trce.c
  ${BASE}/ssl/tls_srp.c

  ${BASE}/crypto/bn/asm/x86_64-gcc.c
  ${BASE}/crypto/bn/rsaz_exp.c
  ${BASE}/crypto/ec/ecp_nistz256.c
  ${BASE}/crypto/evp/m_md2.c
)

if(APPLE)
  set(ASMS_NS /asm/darwin)
endif()

set(ASMS
  ${BASE}${ASMS_NS}/crypto/aes/aesni-mb-x86_64.s
  ${BASE}${ASMS_NS}/crypto/aes/aesni-sha1-x86_64.s
  ${BASE}${ASMS_NS}/crypto/aes/aesni-sha256-x86_64.s
  ${BASE}${ASMS_NS}/crypto/aes/aesni-x86_64.s
  ${BASE}${ASMS_NS}/crypto/aes/aes-x86_64.s
  ${BASE}${ASMS_NS}/crypto/aes/bsaes-x86_64.s
  ${BASE}${ASMS_NS}/crypto/aes/vpaes-x86_64.s
  ${BASE}${ASMS_NS}/crypto/bn/rsaz-avx2.s
  ${BASE}${ASMS_NS}/crypto/bn/rsaz-x86_64.s
  ${BASE}${ASMS_NS}/crypto/bn/x86_64-gf2m.s
  ${BASE}${ASMS_NS}/crypto/bn/x86_64-mont5.s
  ${BASE}${ASMS_NS}/crypto/bn/x86_64-mont.s
  ${BASE}${ASMS_NS}/crypto/camellia/cmll-x86_64.s
  ${BASE}${ASMS_NS}/crypto/ec/ecp_nistz256-x86_64.s
  ${BASE}${ASMS_NS}/crypto/md5/md5-x86_64.s
  ${BASE}${ASMS_NS}/crypto/modes/aesni-gcm-x86_64.s
  ${BASE}${ASMS_NS}/crypto/modes/ghash-x86_64.s
  ${BASE}${ASMS_NS}/crypto/sha/sha1-mb-x86_64.s
  ${BASE}${ASMS_NS}/crypto/sha/sha1-x86_64.s
  ${BASE}${ASMS_NS}/crypto/sha/sha256-mb-x86_64.s
  ${BASE}${ASMS_NS}/crypto/sha/sha256-x86_64.s
  ${BASE}${ASMS_NS}/crypto/sha/sha512-x86_64.s
  ${BASE}${ASMS_NS}/crypto/whrlpool/wp-x86_64.s
  ${BASE}${ASMS_NS}/crypto/x86_64cpuid.s
)

if(UNIX AND NOT APPLE)
  set(SRCS ${SRCS}
    ${BASE}/crypto/bn/bn_asm.c
  )
  set(ASMS ${ASMS}
    ${BASE}/crypto/rc4/rc4-md5-x86_64.s
    ${BASE}/crypto/rc4/rc4-x86_64.s
  )
endif()

set_source_files_properties(${SRCS} PROPERTIES LANGUAGE C)

# XXX(sandello): In Arcadia there are Clang-compatible ASMs only.
set(_o_)
foreach(_a_ ${ASMS})
  get_filename_component(_f_ ${_a_} NAME)
  add_custom_command(
    OUTPUT
      ${CMAKE_CURRENT_BINARY_DIR}/${_f_}.o
    COMMAND
      ${CLANG_EXECUTABLE} -O2
      -o ${CMAKE_CURRENT_BINARY_DIR}/${_f_}.o
      -c ${_a_}
    DEPENDS
      ${_a_}
    WORKING_DIRECTORY
      ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT
      "Clang-compiling OpenSSL assembly ${_f_}"
  )
  set_source_files_properties(
    ${CMAKE_CURRENT_BINARY_DIR}/${_f_}.o
    PROPERTIES EXTERNAL_OBJECT TRUE
  )
  set(_o_ ${_o_} ${CMAKE_CURRENT_BINARY_DIR}/${_f_}.o)
endforeach()

add_definitions(
  -DOPENSSL_THREADS
  -D_REENTRANT
  -DSHA1_ASM
  -DSHA256_ASM
  -DSHA512_ASM
  -DAES_ASM
  -DBSAES_ASM
  -DECP_NISTZ256_ASM
  -DGHASH_ASM
  -DL_ENDIAN
  -DMD5_ASM
  -DOPENSSL_BN_ASM_GF2m
  -DOPENSSL_BN_ASM_MONT
  -DOPENSSL_BN_ASM_MONT5
  -DOPENSSL_IA32_SSE2
  -DVPAES_ASM
  -DWHIRLPOOL_ASM
)

if(UNIX AND NOT APPLE)
  add_definitions(-DRC4_ASM)
else()
  set(SRCS ${SRCS}
    ${BASE}/crypto/rc4/rc4_enc.c
    ${BASE}/crypto/rc4/rc4_skey.c)
endif()


include_directories(
  ${BASE}
  ${BASE}/crypto
  ${BASE}/crypto/asn1
  ${BASE}/crypto/evp
  ${BASE}/crypto/modes
  ${BASE}/include
)

add_library(${NAME} STATIC ${SRCS} ${_o_})

if (_is_gcc)
  set_target_properties(${NAME} PROPERTIES COMPILE_FLAGS -Wno-error)
endif()
